--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-navigator==1.9.7
-anaconda-project==0.8.3
 appnope==0.1.0
 appscript==1.0.1
 asgiref==3.2.3
@@ -18,6 +15,7 @@ backports.shutil-get-terminal-size==1.0.0
 backports.tempfile==1.0
 backports.weakref==1.0.post1
 beautifulsoup4==4.8.0
+biopython==1.75
 bitarray==1.0.1
 bkcharts==0.2
 bleach==3.1.0
@@ -30,12 +28,7 @@ cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 cloudpickle==1.2.2
-clyent==1.2.2
 colorama==0.4.1
-conda==4.7.12
-conda-build==3.18.9
-conda-package-handling==1.6.0
-conda-verify==3.4.2
 contextlib2==0.6.0
 cryptography==2.7
 cycler==0.10.0
@@ -58,16 +51,17 @@ fsspec==0.5.2
 future==0.17.1
 gevent==1.4.0
 glob2==0.7
-gmpy2==2.0.8
 greenlet==0.4.15
 h5py==2.9.0
 HeapDict==1.0.1
+heroku==0.1.4
 html5lib==1.0.1
 idna==2.8
 imageio==2.6.0
 imagesize==1.1.0
 importlib-metadata==0.23
 ipykernel==5.1.2
+ipynb==0.5.1
 ipython==7.8.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
@@ -89,7 +83,6 @@ keyring==18.0.0
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
 libarchive-c==2.8
-lief==0.9.0
 llvmlite==0.29.0
 locket==0.2.0
 lxml==4.4.1
@@ -97,15 +90,11 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 mccabe==0.6.1
 mistune==0.8.4
-mkl-fft==1.0.14
-mkl-random==1.1.0
-mkl-service==2.3.0
 mock==3.0.5
 more-itertools==7.2.0
 mpmath==1.1.0
 msgpack==0.6.1
 multipledispatch==0.6.0
-navigator-updater==0.2.1
 nbconvert==5.6.0
 nbformat==4.4.0
 networkx==2.3
@@ -141,15 +130,20 @@ ptyprocess==0.6.0
 py==1.8.0
 pycodestyle==2.5.0
 pycosat==0.6.3
+pycountry==19.8.18
 pycparser==2.19
 pycrypto==2.6.1
 pycurl==7.43.0.3
+pydotplus==2.0.2
 pyflakes==2.1.1
 Pygments==2.4.2
 pylint==2.4.2
 pyodbc==4.0.27
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
+PyQt5==5.12.3
+PyQt5-sip==12.7.0
+PyQtWebEngine==5.12.1
 pyrsistent==0.15.4
 PySocks==1.7.1
 pytest==5.2.1
@@ -168,7 +162,7 @@ qtconsole==4.5.5
 QtPy==1.9.0
 requests==2.22.0
 rope==0.14.0
-ruamel-yaml==0.15.46
+ruamel.yaml==0.15.46
 scikit-image==0.15.0
 scikit-learn==0.21.3
 scipy==1.3.1
@@ -177,6 +171,7 @@ Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.12.0
+sklearn==0.0
 snowballstemmer==2.0.0
 sortedcollections==1.1.2
 sortedcontainers==2.1.0
@@ -203,8 +198,10 @@ toolz==0.10.0
 tornado==6.0.3
 tqdm==4.36.1
 traitlets==4.3.3
+typed-ast==1.4.1
 unicodecsv==0.14.1
 urllib3==1.24.2
+virtualenv==16.7.9
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.16.0
