--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.2
 django-heroku==0.3.1
+gunicorn==20.0.4
 idna==2.8
 psycopg2==2.8.4
 psycopg2-binary==2.8.4
